--- a/DOM Depth/events.html
+++ b/DOM Depth/events.html
@@ -22,7 +22,7 @@
   <script>
     // Mouse event
     document.getElementById('clickBtn').addEventListener('click', function() {
-      alert('Button was clicked! (click event)');
+      alert('Monesh');
     });
 
     // Keyboard event
