--- a/tailwind/tailwind.html
+++ b/tailwind/tailwind.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tailwind Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  
 </head>
 <body>
-  <div class="container mt-5">
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
+  <div class="p-6">
+  <!-- Flexbox Container -->
+  <div class="flex justify-between items-center bg-blue-200 p-4 rounded-lg">
+    <div class="flex items-center gap-2">
+      <div class="w-10 h-10 bg-blue-500 rounded-full"></div>
+      <span class="font-bold">Flexbox Left</span>
+    </div>
+    <div class="font-semibold">Flexbox Right</div>
   </div>
+
+  <!-- Grid Container -->
+  <div class="grid grid-cols-2 gap-4 mt-6">
+    <div class="bg-green-200 p-4 rounded-lg text-center">Grid 1</div>
+    <div class="bg-green-300 p-4 rounded-lg text-center">Grid 2</div>
+    <div class="bg-green-400 p-4 rounded-lg text-center">Grid 3</div>
+    <div class="bg-green-500 p-4 rounded-lg text-center">Grid 4</div>
+    <div class="bg-green-600 p-4 rounded-lg text-center">Grid 5</div>
+    <div class="bg-green-700 p-4 rounded-lg text-center">Grid 6</div>
+  </div>
+</div>
 </body>
 </html>
